perf: compress runtime